# mimic-cmu_us_slt

./: meson.build  ttsmimic_cmu_us_slt.map
include/: mimic_cmu_us_slt_config.h.in
src/: cmu_us_slt.c  cmu_us_slt_plugin.c
